[package]
name = "ockam_ebpf_impl"
version = "0.1.0"
authors = ["Ockam Developers"]
categories = ["network-programming"]
edition = "2021"
homepage = "https://github.com/build-trust/ockam"
keywords = ["ockam", "crypto", "p2p", "cryptography", "encryption"]
license = "Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/build-trust/ockam/implementations/rust/ockam/ockam_ebpf"
rust-version = "1.70.0"
description = """
eBPF program used by Ockam Privileged Portals
"""

[features]
default = []
logging = ["aya-log-ebpf"]

[dependencies]
aya-ebpf = { version = "0.1.1" }
aya-log-ebpf = { version = "0.1.1", optional = true }
network-types = { version = "0.0.7" }

[[bin]]
name = "ockam_ebpf"
path = "src/entrypoint.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
